# tricots

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: tricot.py  tricots.py
